# hub

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: _common.py  classify_prompt.py  on_merge_request.py  protect_docs.py  session_end.py  session_start.py  track_doc_impact.py  validate_docs.py
.claude/skills/changelog/: SKILL.md
.claude/skills/clone-repos/: SKILL.md
.claude/skills/create-adr/: SKILL.md
.claude/skills/daily-brief/: SKILL.md
.claude/skills/explain-repo/: SKILL.md
.claude/skills/hub-clone-repos/: SKILL.md
.obsidian/: workspace.json
config/: hub.config.example.yaml
docs/: README.md  football-metadata-service-kubectl.html  heimspiel-extra-time-and-penalties.md  index.html
docs/architecture/: README.md
docs/development/: README.md
docs/domain/: README.md
docs/graph/: README.md
docs/interfaces/: README.md
docs/memory/: README.md
docs/operations/: README.md
docs/runbooks/: README.md
docs/workflows/: README.md
hub_lib/: __init__.py  classify.py  frontmatter.py  generate.py  paths.py  queue.py  search.py  validate.py
playground/: README.md
tests/: test_classify.py  test_frontmatter.py  test_generate.py  test_paths.py  test_paths_workspace.py  test_queue.py  test_search.py  test_validate.py
vault/.vault-meta/: mode.json
workflows/: changelog.py  clone_repos.py  daily-brief.workflow.js  explain_repo.py  find_knowledge.py  ingest_repository.py  new_adr.py  refresh_graph.py  scaffold_docs.py  setup_config.py  source_map.py  update_project_docs.py  validate_docs.py
(+15 files in other folders)
