[project]
name = "hub"
version = "0.1.0"
description = "Claude Ops Hub — project-agnostic control layer for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# No importable package left in this repo (workflows/clone_repos.py is a
# self-contained PEP 723 script with its own inline dependencies) — nothing
# to build or install.
[tool.uv]
package = false
